--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 			<head>
 				<title>Web App Geek</title>
 				<meta charset="utf-8">
-				<meta name="description" content="place your description here" />
-				<meta name="author" content="Your name">
-				<meta name="keywords" content="Your keywords" />
+				<meta name="description" content="Tarun Chaudhary Homepage" />
+				<meta name="author" content="Tarun Chaudhary">
+				<meta name="keywords" content="homepage,blog,about,contact,responsive,html5,projects,github,blogger,wordpress,php,JavaScript" />
 				<!-- Optimized mobile viewport -->
 				<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
 				<meta name="apple-mobile-web-app-capable" content="yes" />
