--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 		<html>
 			<head>
-				<title>Web App Geek</title>
+				<title>Curious Techie | Tarun Chaudhary</title>
 				<meta charset="utf-8">
 				<meta name="description" content="Tarun Chaudhary Homepage" />
 				<meta name="author" content="Tarun Chaudhary">
