added resume.html and added a link of it in index page

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 									<li><a href="#blog">Blog</a></li>
 									<li><a href="#projects">Projects</a></li>
 									<li><a href="#contact">Contact</a></li>
+									<li><a target="_blank" href="resume.html">CV</a></li>
 								</ul>
 							</nav>
 							<nav id="overflowMenu" style="display:none;">
@@ -71,6 +72,7 @@
 									<li><a href="#blog">Blog</a></li>
 									<li><a href="#projects">Projects</a></li>
 									<li><a href="#contact">Contact</a></li>
+									<li><a target="_blank" href="resume.html">CV</a></li>
 								</ul>
 							</nav>
 						</header>
