--- a/resume.html
+++ b/resume.html
@@ -87,19 +87,38 @@
                     <h1 class="heading"><span class="FS20">I</span>NDUSTRIAL <span class="FS20">E</span>XPERIENCE</h1>
                 </div>
                 <section id="first">
+                    <div class="FL MT11">
+                                <h1 class="FS15"><span class="FS16">Flipkart</span><br/>
+                                <label>Software Engineer (UI)</label>
+                        </div>
+                        <div class="FR MT11">
+                                <span>[Jan'14 - Present]</span>
+                        </div>
+                        <div class="clearfix">
+                                <ul>
+                                    <li>Responsible for the development and smooth execution of the frontend various frontend projects.</li>
+                                    <li><strong>Technology used:-</strong><br>
+                                        Client Side:- HTML, CSS, JavaScript<br>
+                                        Server Side:- PHP 
+                                    </li>
+                                </ul>
+                        </div>
+
+                </section>
+                <section id="first">
                         <div class="FL MT11">
                                 <h1 class="FS15"><span class="FS16">redBus.in</span> (<span class="FS17">P</span>ILANI <span class="FS17">S</span>OFT <span class="FS17">L</span>ABS <span class="FS17">P</span>VT. <span class="FS17">L</span>TD)</h1>
                                 <label>Software Engineer</label>
                         </div>
                         <div class="FR MT11">
-                                <span>[Apr’13 - Present]</span>
+                                <span>[Apr’13 - Jan'14]</span>
                         </div>
                         <div class="clearfix">
                                 <ul>
                                     <li>Responsible for the frontend development.</li>
                                     <li>Have done several projects out of which Remind Me (UI plus Window Service), Package Tours, New Ticket Format were the major one.</li>
                                     <li><strong>Technology used:-</strong><br>
-                                        Client Side:- HTML5, CSS3, JavaScript<br>
+                                        Client Side:- HTML, CSS, JavaScript<br>
                                         Server Side:- C#.Net 
                                     </li>
                                 </ul>
@@ -158,16 +177,7 @@
                 </ul>
             </section>
 
-            <section id="secondProj">
-                <div class="MT11">
-                    <h1 class="FL FS15"><span class="FS17">E</span>MPTY <span class="FS17">S</span>PACES <span>|</span></h1>
-                    <label>Nimble, Intra Technical Festival, IIT Rajasthan</label>
-                </div>
-                <ul>
-                    <li>Single handedly developed an interface for Online Crypt Hunt, first of its kind for the festival</li>
-                    <li>Developed and maintained the database using MySQL, used HTML, PHP and CSS for developing interface</li>
-                </ul>
-            </section>
+            
         </section>
 
         <section id="posofres">
@@ -176,24 +186,20 @@
             </div>
             <section id="firpos">
                 <div class="MT11">
+                    <span class="FS17">F</span>LIPKART</h1>    
+                </div>
+                <ul>
+                    <li>Leading the Monetization team from the frontend perspective. Responsible for smooth and optimised execution of tasks related to monetization.</li>
+                </ul>    
+            </section>
+            <section id="secpos">
+                <div class="MT11">
                     <h1 class="FS15"><span class="FS17">V</span>ARCHAS 2011, <span class="FS17">I</span>NTER-<span class="FS17">S</span>PORTS <span class="FS17">F</span>ESTIVAL <span class="FS17">IIT</span> <span class="FS17">R</span>AJASTHAN</h1>
                     <label>Coordinator, Basketball</label>
                 </div>
                 <ul>
                     <li>Led a team of 7 volunteers to organize Basketball event of Varchas-2011 in Inter-Sports festival IIT Rajasthan</li>
                     <li>Increased event participation from 400 to 600 participants, approximately 30% y-o-y increase in participation</li>
-                </ul>
-            </section>
-
-            <section id="secpos">
-                <div class="MT11">
-                    <h1 class="FS15"><span class="FS17">T</span>ECHKRITI, <span class="FS17">A</span>NNUAL <span class="FS17">T</span>ECHNICAL <span class="FS17">F</span>ESTIVAL, <span class="FS17">IIT</span> <span class="FS17">K</span>ANPUR</h1>
-                    <label>Assistant coordinator, Software Corner</label>
-                </div>
-                <ul>
-                    <li>Successfully conducted “Software Corner” in a team of 4 students having participation of more than 500
-                    students from various colleges including IIT Delhi and IIT kharagpur</li>
-                    <li>Several programming events of “Software Corner” focused on algorithm development and coding</li>
                 </ul>
             </section>
 
