--- a/resume.html
+++ b/resume.html
@@ -25,8 +25,8 @@
         <section id="intro">
                 <div id="leftIntro">
                         <p>Tarun Chaudhary</p>
-                        <p>Software Engineer</p>
-                        <p>redBus.in</p>
+                        <p>Software Engineer (UI)</p>
+                        <p>Flipkart</p>
                         <p>Homepage:- <a target="_blank" href="http://tarun29061990.com">http://tarun29061990.com</a></p>
                         <p>Github Repo:- <a target="_blank" href="http://github.com/tarun29061990">https://github.com/tarun29061990</a></p>
                 </div>
@@ -96,7 +96,7 @@
                         </div>
                         <div class="clearfix">
                                 <ul>
-                                    <li>Responsible for the development and smooth execution of the frontend various frontend projects.</li>
+                                    <li>Responsible for the development and smooth execution of the various frontend projects.</li>
                                     <li><strong>Technology used:-</strong><br>
                                         Client Side:- HTML, CSS, JavaScript<br>
                                         Server Side:- PHP 
@@ -189,7 +189,7 @@
                     <span class="FS17">F</span>LIPKART</h1>    
                 </div>
                 <ul>
-                    <li>Leading the Monetization team from the frontend perspective. Responsible for smooth and optimised execution of tasks related to monetization.</li>
+                    <li>Leading the Monetization team from the frontend perspective. Responsible for smooth and optimized execution of tasks related to monetization.</li>
                 </ul>    
             </section>
             <section id="secpos">
