--- a/resume.html
+++ b/resume.html
@@ -71,7 +71,7 @@
                 <div id="langSpec">
                        <div> 
                                 <span class="FWB">Programming Languages:</span>
-                                <span class="ML28">C, C++, Java, JavaScript, C#.Net </span>
+                                <span class="ML28">C, C++, Java, JavaScript, PHP </span>
                         </div>
 
                         <p class="FWB FL">Softwares:</p>
