--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
         <title>Curious Techie | Tarun Chaudhary</title>
         <meta name="description" content="Tarun Chaudhary CV">
         <meta name="author" content="Tarun Chaudhary">
-        <meta name="keywords" content="resume,CV,software,software engineer,redBus,projects,industrial experience">
+        <meta name="keywords" content="resume,CV,software,software engineer,redBus,projects,industrial experience,flipkart">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,7 +27,7 @@
                         <p>Tarun Chaudhary</p>
                         <p>Software Engineer (UI)</p>
                         <p>Flipkart</p>
-                        <p>Homepage:- <a target="_blank" href="http://tarun29061990.com">http://tarun29061990.com</a></p>
+                        <p>Homepage:- <a target="_blank" href="http://tarun29061990.com">http://curioustechie.com</a></p>
                         <p>Github Repo:- <a target="_blank" href="http://github.com/tarun29061990">https://github.com/tarun29061990</a></p>
                 </div>
                 <div id="rightIntro">
