--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
                         <p>Tarun Chaudhary</p>
                         <p>Software Engineer (UI)</p>
                         <p>Flipkart</p>
-                        <p>Homepage:- <a target="_blank" href="http://tarun29061990.com">http://curioustechie.com</a></p>
+                        <p>Homepage:- <a target="_blank" href="http://curioustechie.in">http://curioustechie.com</a></p>
                         <p>Github Repo:- <a target="_blank" href="http://github.com/tarun29061990">https://github.com/tarun29061990</a></p>
                 </div>
                 <div id="rightIntro">
