some text and css changes

--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
 									<figure>
 										<img src="images/my-pic.jpg" alt="myPic" width="213" height="241"/>
 									</figure>
-									<span>Hi.....
-										Myself Tarun Chaudhary. My Journey Started on 29th of June 1990 at Kota (Rajasthan). I am a graduate from IIT Rajasthan, Electrical Engg. I love programming and I am crazy about web applications and want to conquer the whole web world. I love to explore and develop new things.In my free time I love to play guitar, Write poems and party with friends.
+									<span>
+										I am a graduate from IIT Rajasthan, Loves programming and a JavaScript Enthusiast. I specialize in Web development and loves to get my hands dirty with web applications. Have a passion towards exploring and developing new things.
+										In my free time I love to play guitar, write poems and party with friends.
 									</span>
 									<a id="facebook" target="_blank" href="https://www.facebook.com/tarun29061990"><span id="fb-active"></span></a>
 									<a id="twitter" target="_blank" href="https://twitter.com/tarun29061990"><span id="twitter-active"></span></a>
