--- a/resume.html
+++ b/resume.html
@@ -71,7 +71,7 @@
                 <div id="langSpec">
                        <div> 
                                 <span class="FWB">Programming Languages:</span>
-                                <span class="ML28">C, C++, Java, JavaScript, PHP </span>
+                                <span class="ML28">HTML, CSS, JavaScript, PHP, JAVA</span>
                         </div>
 
                         <p class="FWB FL">Softwares:</p>
@@ -88,7 +88,7 @@
                 </div>
                 <section id="first">
                     <div class="FL MT11">
-                                <h1 class="FS15"><span class="FS16">Flipkart</span><br/>
+                                <h1 class="FS15"><span class="FS16">Flipkart</span></h1>
                                 <label>Software Engineer (UI)</label>
                         </div>
                         <div class="FR MT11">
@@ -186,7 +186,7 @@
             </div>
             <section id="firpos">
                 <div class="MT11">
-                    <span class="FS17">F</span>LIPKART</h1>    
+                    <h1 class="FS15"><span class="FS17">F</span>LIPKART</h1>    
                 </div>
                 <ul>
                     <li>Leading the Monetization team from the frontend perspective. Responsible for smooth and optimized execution of tasks related to monetization.</li>
