--- a/resume.html
+++ b/resume.html
@@ -71,7 +71,7 @@
                 <div id="langSpec">
                        <div> 
                                 <span class="FWB">Programming Languages:</span>
-                                <span class="ML28">HTML, CSS, JavaScript, PHP, JAVA</span>
+                                <span class="ML28">HTML, CSS, JavaScript, PHP, JAVA, Threejs</span>
                         </div>
 
                         <p class="FWB FL">Softwares:</p>
@@ -86,6 +86,24 @@
                 <div class="BT BB background">
                     <h1 class="heading"><span class="FS20">I</span>NDUSTRIAL <span class="FS20">E</span>XPERIENCE</h1>
                 </div>
+                <section id="first">
+                    <div class="FL MT11">
+                                <h1 class="FS15"><span class="FS16">Livspace</span></h1>
+                                <label>Software Engineer</label>
+                        </div>
+                        <div class="FR MT11">
+                                <span>[May'15 - Present]</span>
+                        </div>
+                        <div class="clearfix">
+                                <ul>
+                                    <li>Responsible for development of various tools related to home designing.</li>
+                                    <li><strong>Technology used:-</strong><br>
+                                        Client Side:- HTML, CSS, JavaScript, ThreeJs<br>
+                                    </li>
+                                </ul>
+                        </div>
+
+                </section>
                 <section id="first">
                     <div class="FL MT11">
                                 <h1 class="FS15"><span class="FS16">Flipkart</span></h1>
@@ -184,6 +202,7 @@
             <div class="BT BB background">
                 <h1 class="heading"><span class="FS20">P</span>OSITIONS <span class="FS20">O</span>F <span class="FS20">R</span>ESPONSIBILITY</h1>
             </div>
+            
             <section id="firpos">
                 <div class="MT11">
                     <h1 class="FS15"><span class="FS17">F</span>LIPKART</h1>    
