changed cover image and resume

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<div class="eachContainer">
 									<h1>About Me</h1>
 									<figure>
-										<img src="images/my-pic.jpg" alt="myPic" width="213" height="241"/>
+										<img src="images/my_pic.jpg" alt="myPic" width="241" height="241"/>
 									</figure>
 									<span>
 										I am a graduate from IIT Rajasthan, Loves programming and a JavaScript Enthusiast. I specialize in Web development and loves to get my hands dirty with web applications. Have a passion towards exploring and developing new things.
