--- a/resume.html
+++ b/resume.html
@@ -25,8 +25,8 @@
         <section id="intro">
                 <div id="leftIntro">
                         <p>Tarun Chaudhary</p>
-                        <p>Software Engineer (UI)</p>
-                        <p>Flipkart</p>
+                        <p>Software Engineer</p>
+                        <p>Livspace</p>
                         <p>Homepage:- <a target="_blank" href="http://curioustechie.in">http://curioustechie.in</a></p>
                         <p>Github Repo:- <a target="_blank" href="http://github.com/tarun29061990">https://github.com/tarun29061990</a></p>
                 </div>
